add qiniu object storage support

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,6 +32,10 @@
   name = "github.com/sirupsen/logrus"
   version = ">=1.0.5"
 
+[[constraint]]
+  name = "github.com/qiniu/api.v7"
+  branch = "master" 
+
 [prune]
   go-tests = true
   unused-packages = true
