--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
     "material-ui": "^1.0.0-beta.43",
+    "material-ui-search-bar": "^1.0.0-beta.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
