--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,8 @@
     "material-ui": "^1.0.0-beta.43",
     "material-ui-search-bar": "^1.0.0-beta.4",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
